[package]
name = "bt2usb"
version = "0.1.0"
edition = "2024"

[dependencies]
#cyw43-pio = { version = "0.2.0", features = ["defmt", "overclock"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.9.0", features = [
    #"task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    #"integrated-timers",
] }
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

trouble-host = { version = "0.5.0", features = ["default-packet-pool-mtu-128"] }
static_cell = "2.1.0"

# embassy-futures = { version = "0.1.1", features = ["defmt"] }
# cyw43 = { version = "0.2.0", features = ["defmt"] }
# embassy-boot-rp = { version = "0.3.0", features = ["defmt"] }
# embassy-embedded-hal = "0.2.0"

[features]
skip-cyw43-firmware = []
