[package]
name = "bt2usb"
version = "0.1.0"
edition = "2024"

[dependencies]
cyw43 = { version = "0.4.0", features = ["defmt", "bluetooth"] }
cyw43-pio = { version = "0.7", features = ["defmt"] }

defmt = "1"
defmt-rtt = "1"
embassy-executor = { version = "0.9.0", features = [
    #"task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    #"integrated-timers",
] }
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }

embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = "0.6.0"
embedded-io = "0.6"

bt-hci = "0.3.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

trouble-host = { version = "0.2.4", features = ["default-packet-pool-mtu-128", "defmt", "scan", "security"] }

# for the `security` feature
#embedded-storage-async = { version = "0.4.1", optional = true }
#sequential-storage = { version = "5.0.0", optional = true }

portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1.0"

panic-probe = { version = "1.0", features = ["print-defmt"] }

embassy-futures = { version = "0.1", features = ["defmt"] }
# embassy-boot-rp = { version = "0.3.0", features = ["defmt"] }
# embassy-embedded-hal = "0.2.0"

[features]
skip-cyw43-firmware = []

[profile.release]
# location info
debug = 2
