[package]
name = "bt2usb"
version = "0.1.0"
edition = "2024"

[dependencies]
# https://github.com/embassy-rs/embassy/issues/4864
#cyw43 = { version = "0", features = ["defmt", "bluetooth"] }
cyw43 = { version = "0.5.0", path = "../embassy/cyw43", features = ["defmt", "bluetooth"] }
cyw43-pio = { version = "0.8", path = "../embassy/cyw43-pio", features = ["defmt"] }

defmt = "1"
defmt-rtt = "1"
embassy-executor = { version = "0.9.0", features = [
    #"task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    #"integrated-timers",
], path = "../embassy/embassy-executor" }
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
], path = "../embassy/embassy-rp" }

embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
], path = "../embassy/embassy-time" }
embassy-sync = "0.6.0"

embedded-io = "0.6"

bt-hci = "0.6"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

# trouble 0.2.4 -> bt-hci 0.3
# trouble 0.3   -> bt-hci 0.5
#
# cyw43 0.4.0   -> bt-hci 0.3 # works with `trouble 0.2.4`
# cyw43 0.5.0   -> bt-hci 0.4 # doesn't work with any `trouble`
#
# but we need trouble 0.3 at least, for the `security` feature
trouble-host = { version = "0.3.0", path = "../trouble/host", features = ["default-packet-pool-mtu-128", "defmt", "scan", "security"] }

rand_core = "0.6"

# for the `security` feature
#embedded-storage-async = { version = "0.4.1", optional = true }
#sequential-storage = { version = "5.0.0", optional = true }

portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1.0"

panic-probe = { version = "1.0", features = ["print-defmt"] }

embassy-futures = { version = "0.1", features = ["defmt"] }
# embassy-boot-rp = { version = "0.3.0", features = ["defmt"] }
# embassy-embedded-hal = "0.2.0"

[features]
skip-cyw43-firmware = []

[profile.release]
# location info
debug = 2
